# PyNetio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  entrypoint.py  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
Netio/: Device.py  __init__.py  cli.py  exceptions.py
examples/: example.py  netio.example.ini  netio.ini.example  netio.yml.example
tests/: test_device.py
