[tool.poetry]
name = "Netio"
version = "1.0.13"
description = "Interface to control NETIO Products devices"
authors = ["Adam Verner <averner@netio.eu>"]
readme = "README.md"
repository = "https://github.com/netioproducts/PyNetio"
packages = [{include = "Netio"}]
license = "MIT"
keywords = ["netio", "netio products", "power control", "power management", "power monitoring", "power metering",
    "power switching", "power switching device", "power switching devices", "power switching products",
    "power switching products"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Power (UPS)",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pyopenssl = "^23.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
requests-mock = "^1.11.0"
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#define the scirpt to be runnable using CLI
[tool.poetry.scripts]
Netio = "Netio.cli:main"
